fix photo not showing

--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -23,7 +23,6 @@
     height: 444px;
     top: -64px;
     flex-shrink: 0;
-    background-image: url('/teamPhoto-large.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
